--- a/styles/globals.css
+++ b/styles/globals.css
@@ -83,6 +83,10 @@ body {
   display: flex;
   justify-content: space-around;
 }
+.productRowsStyle a {
+  text-decoration: none;
+  color: rgb(49, 124, 225);
+}
 
 .productBox {
   background-color: white;
@@ -115,10 +119,12 @@ body {
   width: 80vw;
 }
 .displayProduct {
+  background-color: white;
   height: 60vh;
   width: 30vw;
-  border: 1px solid;
+  border: 1.5px solid;
   margin: 10px;
+  border-radius: 20px;
 }
 .displayTextBoxStyle {
   height: 60vh;
@@ -134,6 +140,7 @@ body {
   font-weight: 500;
   margin: 10px;
 }
+
 .displayTextBoxStyle button {
   color: rgb(49, 124, 225);
   font-family: Herculanum, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
@@ -145,8 +152,13 @@ body {
   border: solid 2px rgba(49, 124, 225);
   border-radius: 40px;
   cursor: pointer;
+  transition: ease-in 0.3s;
 }
 .displayTextBoxStyle button:hover {
   color: white;
   background-color: rgb(49, 124, 225);
+}
+.singleProductStyle {
+  max-height: 57vh;
+  max-width: 30vw;
 }
