--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,19 +1,22 @@
 html,
 body {
-  color: rgb(49, 124, 225);
+  color: rgb(40, 110, 200);
   padding: 0;
   margin: 0;
   background-color: rgb(249, 247, 247);
+  background-image: url('/gaming-pattern.png');
   font-family: Herculanum, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
 }
 .logoStyle {
-  max-width: 35px;
-  margin: 10px;
+  max-width: 75px;
+  margin: 5px;
 }
-
+.shoppingCartStyle {
+  max-width: 25px;
+}
 .headerStyle {
-  background-color: rgb(49, 124, 225);
+  background-color: rgb(40, 110, 200);
   height: 10vh;
   width: 100vw;
   display: flex;
@@ -28,7 +31,7 @@ body {
 }
 
 .footerStyle {
-  background-color: rgb(49, 124, 225);
+  background-color: rgb(40, 110, 200);
   height: 10vh;
   width: 100vw;
   display: flex;
@@ -66,11 +69,11 @@ body {
   margin: 20px;
   padding-bottom: 10px;
   font-size: 30px;
-  color: rgb(49, 124, 225);
+  color: rgb(40, 110, 200);
 }
 .mainPageStyle h1 {
   font-size: 42px;
-  color: rgb(49, 124, 225);
+  color: rgb(40, 110, 200);
   margin: 20px;
 }
 .productPageStyle {
@@ -85,7 +88,7 @@ body {
 }
 .productRowsStyle a {
   text-decoration: none;
-  color: rgb(49, 124, 225);
+  color: rgb(40, 110, 200);
 }
 
 .productBox {
@@ -95,7 +98,7 @@ body {
   width: 20vw;
   height: 50vh;
   margin: 20px;
-  box-shadow: 6px 6px rgb(49, 124, 225, 0.6);
+  box-shadow: 6px 6px rgb(40, 110, 200, 0.6);
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -125,10 +128,13 @@ body {
   border: 1.5px solid;
   margin: 10px;
   border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .displayTextBoxStyle {
   height: 60vh;
-  width: 30vw;
+  width: 25vw;
   margin: 10px;
   display: flex;
   flex-direction: column;
@@ -141,24 +147,138 @@ body {
   margin: 10px;
 }
 
-.displayTextBoxStyle button {
-  color: rgb(49, 124, 225);
+.addToCartButton {
+  color: rgb(40, 110, 200);
   font-family: Herculanum, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
     Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
-  font-size: 25px;
+  font-size: 15px;
   margin: 10px;
-  padding: 10px;
+  padding: 5px;
   background-color: white;
-  border: solid 2px rgba(49, 124, 225);
+  border: solid 2px rgba(40, 110, 200);
   border-radius: 40px;
   cursor: pointer;
   transition: ease-in 0.3s;
 }
-.displayTextBoxStyle button:hover {
+.addToCartButton:hover {
   color: white;
-  background-color: rgb(49, 124, 225);
+  background-color: rgb(40, 110, 200);
 }
-.singleProductStyle {
-  max-height: 57vh;
-  max-width: 30vw;
+.originalProductStyle {
+  max-height: 59vh;
+  max-width: 27vw;
+}
+
+.swappedProductStyle,
+.displayProduct:hover .originalProductStyle {
+  max-height: 59vh;
+  max-width: 27vw;
+  display: none;
+}
+.displayProduct:hover .swappedProductStyle {
+  max-height: 59vh;
+  max-width: 27vw;
+  display: inline;
+}
+.cartLayoutStyle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100vw;
+}
+.cartInnerStyle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 50vw;
+}
+.cartInnerStyle a {
+  color: rgb(40, 110, 200);
+  font-family: Herculanum, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  text-decoration: none;
+  font-size: 25px;
+  margin: 20px;
+  padding: 10px;
+  background-color: white;
+  border: solid 2px rgba(40, 110, 200);
+  border-radius: 40px;
+  cursor: pointer;
+  transition: ease-in 0.3s;
+}
+.cartInnerStyle a:hover {
+  background-color: rgb(40, 110, 200);
+  color: whitesmoke;
+}
+.cartBoxStyle {
+  background-color: white;
+  border: rgb(40, 110, 200) 2px solid;
+  border-radius: 40px;
+  width: 65vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.cartBoxStyle button {
+  color: rgb(40, 110, 200);
+  font-family: Herculanum, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 15px;
+  margin: 10px;
+  padding: 5px;
+  background-color: white;
+  border: solid 2px rgba(40, 110, 200);
+  border-radius: 40px;
+  cursor: pointer;
+  transition: ease-in 0.3s;
+}
+.cartBoxStyle hr {
+  width: 80%;
+  border-top: 2px solid rgb(40, 110, 200);
+}
+.cartInnerStyle button:hover {
+  background-color: rgb(40, 110, 200);
+  color: whitesmoke;
+}
+
+.cartItemStyle {
+  width: 65vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  margin-bottom: 20px;
+}
+.cartItemStyle li {
+  list-style-type: none;
+}
+.cartItemStyle hr {
+  width: inherit;
+}
+
+.listItemStyle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 80%;
+}
+.listItemStyle img {
+  max-height: 80px;
+}
+.secondListItemStyle {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 50%;
+  margin-top: -15px;
+}
+.cartTotalStyle {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  font-size: 24px;
 }
