--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,7 +24,7 @@ body {
   align-items: center;
 }
 .headerStyle a {
-  margin: 10px;
+  margin: 20px;
   color: whitesmoke;
   font-size: 19px;
   font-weight: 500;
@@ -50,7 +50,7 @@ body {
   font-weight: 500;
 }
 .footerStyle p {
-  margin: 10px;
+  margin: 20px;
   color: whitesmoke;
   font-size: 14px;
   font-weight: 400;
@@ -289,4 +289,77 @@ color: rgb(40, 110, 200);
   align-items: center;
   justify-content: space-around;
   font-size: 24px;
+}
+.checkoutPageStyle{
+  height: 80vh;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.checkoutLayoutStyle{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 50vh;
+  max-height: 75vh;
+  width: 40vw;
+  background-color: white;
+  border: solid;
+  border-radius: 40px;
+}
+.checkoutFormStyle{
+  display: flex;
+  flex-direction: column;
+  margin: 20px;
+  justify-content: center;
+  align-items: center;
+  width: 80%;
+}
+.checkoutFormStyle label{
+  margin: 8px;
+}
+.checkoutFormStyle input{
+  width: 60%;
+}
+.checkoutFormStyle button{
+  color: rgb(40, 110, 200);
+  font-family: Herculanum, -apple-system, BlinkMacSystemFont, Segoe UI, Roboto,
+    Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-size: 15px;
+  margin: 10px;
+  padding: 5px;
+  background-color: white;
+  border: solid 2px rgba(40, 110, 200);
+  border-radius: 40px;
+  cursor: pointer;
+  transition: ease-in 0.3s;
+}
+.checkoutFormStyle button:hover{
+  background-color: rgb(40, 110, 200);
+  color: whitesmoke;
+}
+.checkoutFormStyle p {
+  font-size: 32px;
+}
+.thankyouPageStyle {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 80vh;
+}
+.thankyouTextStyle{
+  max-height: 20vh;
+  max-width: 50vw;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.thankyouTextStyle h1{
+  font-size: 40px;
+}
+.thankyouTextStyle h2{
+  font-size: 30px;
 }
