--- a/styles/globals.css
+++ b/styles/globals.css
@@ -12,6 +12,15 @@ body {
   max-width: 75px;
   margin: 5px;
 }
+.githubStyle {
+  max-height: 5vh;
+  margin: 5px;
+  cursor: pointer;
+}
+.codeBy{
+  display: flex;
+  align-items: center;
+}
 .shoppingCartStyle {
   max-width: 25px;
 }
@@ -106,6 +115,13 @@ body {
   flex-direction: column;
   align-items: center;
 }
+.productBox:hover{
+  /* width: 21vw;
+  height: 51vh; */
+  margin: 15px 20px 20px 20px;
+  box-shadow: 6px 6px rgb(225, 87, 63, 0.4);
+}
+
 .productBox img {
   max-height: 35vh;
 }
